# dev-cleaner

./: Cargo.toml  README.md  architecture.excalidraw
.cargo/: config.toml
dev_cleaner/: Cargo.toml
dev_cleaner/src/: main.rs
dev_cleaner_cli/: Cargo.toml
dev_cleaner_cli/resources/fonts/: Tubes-Smushed.flf
dev_cleaner_cli/src/: lib.rs
dev_cleaner_core/: Cargo.toml
dev_cleaner_core/src/: config.rs  filters.rs  folderscan.rs  lib.rs  macros.rs  utils.rs
dev_cleaner_gui/: Cargo.toml
dev_cleaner_gui/src/: app.rs  lib.rs
