[workspace]
members = [
    "dev_cleaner",
    "dev_cleaner_core",
    "dev_cleaner_cli",
    "dev_cleaner_gui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["HafiTheCat <ufq0x4vbq@mozmail.com>"]
repository = "https://github.com/hafithecat/dev-cleaner"
issues = "https://github.com/hafithecat/dev-cleaner/issues"

[workspace.dependencies]
log = "0.4.27"