[package]
name = "dev_cleaner"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
dev_cleaner_core = { path = "../dev_cleaner_core" }
dev_cleaner_cli = { path = "../dev_cleaner_cli" }
dev_cleaner_gui = { path = "../dev_cleaner_gui" }

tokio = { version = "1.45.1", features = ["full"] }
env_logger = "0.11.8"

log.workspace = true
