[package]
name = "dev_cleaner_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
dev_cleaner_core = { path = "../dev_cleaner_core" }

clap = { version = "4.5.40", features = ["derive"] }
figlet-rs = "0.1.5"

log.workspace = true
owo-colors.workspace = true